==> STMicroelectronics/STM32CubeC5/examples/ll/spi/full_duplex_two_boards_com_it_controller/NUCLEO-C562RE/generated/hal/mx_spi1.c <==
/**
  ******************************************************************************
  * @file           : mx_spi1.c
  * @brief          : SPI1 Peripheral initialization
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_spi1.h"

/* Private typedef -----------------------------------------------------------*/
/* Private define ------------------------------------------------------------*/
/* Private macro -------------------------------------------------------------*/
/* Private variables ---------------------------------------------------------*/
/* Private functions prototype------------------------------------------------*/
/* Exported variables by reference--------------------------------------------*/

/******************************************************************************/
/* Exported functions for SPI in LL layer */
/******************************************************************************/
SPI_TypeDef *mx_spi1_init(void)
{
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_SPI1);
  /* LL_RCC_SetSPIClockSource(LL_RCC_SPI1_CLKSOURCE_PCLK2); */ /* Configuration matches register reset state at startup. */

  uint32_t cfg1_config = LL_SPI_DATA_WIDTH_8_BIT | LL_SPI_BAUD_RATE_PRESCALER_16;
  uint32_t cfg2_config = LL_SPI_MODE_MASTER | LL_SPI_FULL_DUPLEX | LL_SPI_CLOCK_POLARITY_LOW
                       | LL_SPI_CLOCK_PHASE_1_EDGE | LL_SPI_MSB_FIRST | LL_SPI_NSS_SOFT;

  LL_SPI_SetConfig(SPI1, cfg1_config, cfg2_config);

  /* LL_SPI_SetStandard(SPI1, LL_SPI_PROTOCOL_MOTOROLA); */ /* Configuration matches register reset state at startup. */

  /* LL_SPI_SetInterDataIdleness(SPI1, LL_SPI_MIDI_DELAY_0_CYCLE); */ /* Configuration matches register reset state at startup. */

  /* LL_SPI_SetFIFOThreshold(SPI1, LL_SPI_FIFO_THRESHOLD_1_DATA); */ /* Configuration matches register reset state at startup. */

  /* ### SPI1 GPIO Configuration ########################### */

  /* GPIO Clocks activation */
  LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);

  /**
    [GPIO Pin] ------> [Signal Name] ------> [Labels]

       PA5     ------>   SPI1_SCK   ------>  PA5
       PA6     ------>   SPI1_MISO   ------>  PA6
       PA7     ------>   SPI1_MOSI   ------>  PA7
    **/

  /* Configure IO output speed (Low, Medium, High or Very-High) */
  LL_GPIO_SetPinSpeed(PA5_PORT, PA5_PIN, LL_GPIO_SPEED_FREQ_MEDIUM);
  LL_GPIO_SetPinSpeed(PA6_PORT, PA6_PIN, LL_GPIO_SPEED_FREQ_MEDIUM);
  LL_GPIO_SetPinSpeed(PA7_PORT, PA7_PIN, LL_GPIO_SPEED_FREQ_MEDIUM);

  /* Configure IO output type (Push-Pull or Open-Drain) */
  /* LL_GPIO_SetPinOutputType(GPIOA, PA5_PIN | PA6_PIN | PA7_PIN, LL_GPIO_OUTPUT_PUSHPULL); */ /* Configuration matches register reset state at startup. */

  /* Activate the Pull-up, Pull-down resistor, or No pull for the current IO */
  /* LL_GPIO_SetPinPull(PA5_PORT, PA5_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinPull(PA6_PORT, PA6_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinPull(PA7_PORT, PA7_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */

  /* Configure the Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(PA5_PORT, PA5_PIN, LL_GPIO_AF_5);
  LL_GPIO_SetAFPin_0_7(PA6_PORT, PA6_PIN, LL_GPIO_AF_5);
  LL_GPIO_SetAFPin_0_7(PA7_PORT, PA7_PIN, LL_GPIO_AF_5);

  /* Configure IO direction mode (Input, Output, Alternate or Analog) */
  LL_GPIO_SetPinMode(PA5_PORT, PA5_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetPinMode(PA6_PORT, PA6_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetPinMode(PA7_PORT, PA7_PIN, LL_GPIO_MODE_ALTERNATE);

  /* Enable the interrupt for SPI */
  NVIC_SetPriority(SPI1_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 0, 0));
  NVIC_EnableIRQ(SPI1_IRQn);
return SPI1;
}

void mx_spi1_deinit(void)
{
  LL_SPI_Disable(SPI1);

  /* ### GPIO deinitialization of SPI1: SPI1_SCK,SPI1_MISO,SPI1_MOSI ########################### */

  /* Configure IO in Analog Mode */
  LL_GPIO_SetPinMode(PA5_PORT, PA5_PIN, LL_GPIO_MODE_ANALOG);
  LL_GPIO_SetPinMode(PA6_PORT, PA6_PIN, LL_GPIO_MODE_ANALOG);
  LL_GPIO_SetPinMode(PA7_PORT, PA7_PIN, LL_GPIO_MODE_ANALOG);

  /* Configure the default Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(PA5_PORT, PA5_PIN, LL_GPIO_AF_0);
  LL_GPIO_SetAFPin_0_7(PA6_PORT, PA6_PIN, LL_GPIO_AF_0);
  LL_GPIO_SetAFPin_0_7(PA7_PORT, PA7_PIN, LL_GPIO_AF_0);

  /* Configure the default value for IO Speed */
  LL_GPIO_SetPinSpeed(PA5_PORT, PA5_PIN, LL_GPIO_SPEED_FREQ_LOW);
  LL_GPIO_SetPinSpeed(PA6_PORT, PA6_PIN, LL_GPIO_SPEED_FREQ_LOW);
  LL_GPIO_SetPinSpeed(PA7_PORT, PA7_PIN, LL_GPIO_SPEED_FREQ_LOW);

  /* Configure the default value IO Output Type */
  LL_GPIO_SetPinOutputType(GPIOA, PA5_PIN | PA6_PIN | PA7_PIN, LL_GPIO_OUTPUT_PUSHPULL);

  /* Deactivate the Pull-up and Pull-down resistor for the current IO */
  LL_GPIO_SetPinPull(PA5_PORT, PA5_PIN, LL_GPIO_PULL_NO);
  LL_GPIO_SetPinPull(PA6_PORT, PA6_PIN, LL_GPIO_PULL_NO);
  LL_GPIO_SetPinPull(PA7_PORT, PA7_PIN, LL_GPIO_PULL_NO);

  /* Reset the IO output state */
  LL_GPIO_WriteOutputPin(PA5_PORT, PA5_PIN | PA6_PIN | PA7_PIN, LL_GPIO_PIN_RESET);
}

/******************************************************************************/
/*          SPI1 global interrupt is managed directly in user code.           */
/******************************************************************************/
/* void SPI1_IRQHandler(void)
{
}
  */
